--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.22.0
 pandas==1.3.5
 numpy==1.21.6
-pymongo==4.3.3
+pymongo[srv]==4.3.3
 certifi==2023.5.7
 python-dotenv==1.0.0
 dnspython==2.3.0
